description fixes + class adjustments